# SecONNds

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main_resnet50.cpp  non_lin_algos.cpp  non_lin_algos.h
SCI/networks/: CMakeLists.txt  _extract_pattern.py  _gen_conv_off_instructions.sh  _modify_and_insert.py  _write_conv_on_intructions.py  main_densenet121.cpp  main_resnet50.cpp  main_sqnet.cpp
SCI/src/: CMakeLists.txt  defines_uniform.h  functionalities_uniform.h  globals.cpp  globals.h  library_fixed.cpp  library_fixed_uniform.cpp  library_fixed_uniform.h  library_fixed_uniform_cheetah.cpp
SCI/src/BuildingBlocks/: aux-protocols.cpp  aux-protocols.h  truncation-cheetah.cpp  truncation.cpp  truncation.h  value-extension.cpp  value-extension.h
SCI/src/LinearHE/: CMakeLists.txt  conv-field.cpp  conv-field.h  defines-HE.h  elemwise-prod-field.cpp  fc-field.cpp  utils-HE.cpp  utils-HE.h
SCI/src/LinearOT/: linear-ot.cpp  linear-ot.h
SCI/src/Millionaire/: bit-triple-generator.h  equality.h  millionaire.h  millionaire_with_equality.h
SCI/src/NonLinear/: argmax.h  drelu-field.h  maxpool.h  relu-field.h  relu-interface.h  relu-ring.h
SCI/src/OT/: cheetah-ot_pack.h  ot_pack.h
SCI/src/OT/ferret/: silent_ot.h
SCI/src/cheetah/: cheetah-api.cpp  cheetah-api.h
SCI/src/utils/: constants.h
include/gemini/cheetah/: hom_bn_ss.cc  hom_conv2d_core.cu  hom_conv2d_core.cuh  hom_conv2d_ss.cc  hom_conv2d_ss.h  hom_fc_ss.cc  tensor_encoder.cc  tensor_encoder.h
include/gemini/core/: types.h
networks/: _gen_conv_off_instructions.sh  _modify_and_insert.py  _write_conv_on_intructions.py  drop_index.py  extract_pattern.py  extract_tmp_pts.sh  main_densenet121.cpp  main_densenet121_cheetah.cpp  main_resnet50.cpp  main_resnet50_0.cpp  main_resnet50_0_1.cpp  main_resnet50_0_2.cpp  main_resnet50_0_2_3.cpp  main_resnet50_0_2_3_4.cpp  main_resnet50_0_2_3_4_5.cpp  main_resnet50_conv_off.cpp  main_resnet50_conv_on.cpp  main_resnet50_tmp_pts.cpp  main_sqnet.cpp
patch/: SEAL.patch  troy-nova.patch
scripts/: build-deps.sh  build.sh  common.sh  run-all-fworks-client.sh  run-all-fworks-server.sh  run-client.sh  run-cnn-all-fw.sh  run-cnn.sh  run-conv-gpu.sh  run-server.sh  run-sqnet-conv-gpu.sh
